# atlas

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEBUGGING_METHODOLOGY.md  QUICKSTART.md  README.md  _typos.toml  deny.toml
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: device.rs  error.rs  lib.rs
crates/atlas-core/src/config/: methods.rs  tests.rs
crates/atlas-spark-bench/: Cargo.toml
crates/atlas-spark-bench/src/: lib.rs
crates/spark-comm/: Cargo.toml
crates/spark-comm/src/: lib.rs
crates/spark-model/: Cargo.toml
crates/spark-model/examples/: fp8gemm_microtest.rs  gdn_conv_kn_microtest.rs  w4a16_m17_bench.rs  w4a16_parity_microtest.rs
crates/spark-model/src/: layer.rs  speculative.rs  weight_map.rs
crates/spark-model/src/factory/: m2_setup.rs
crates/spark-model/src/layer/: tests.rs
crates/spark-model/src/layers/: deepseek_v4_mtp.rs  dense_ffn.rs  dflash_head.rs  mod.rs  mtp_head.rs
crates/spark-model/src/model/: drafter_context.rs  impl_a1.rs  impl_a2.rs  impl_a3.rs  impl_b1.rs  impl_b2.rs  impl_b3.rs  mod.rs  mtp_carry.rs  ssm_snapshot.rs  types.rs
crates/spark-model/src/traits/: model.rs
crates/spark-model/src/weight_loader/: dflash_loader.rs  qwen35_dense.rs
crates/spark-model/src/weight_map/: fp8_dequant.rs  fp8_lut.rs  loaders_moe.rs  model_a.rs  quant_helpers.rs  quantized.rs
crates/spark-model/tests/: arm2_leg2_decode.rs  arm2_leg2_prefill.rs
crates/spark-model/tests/arm2_common/: support.rs
crates/spark-runtime/: Cargo.toml  build.rs
crates/spark-runtime/examples/: metal_layer3_attention.rs  metal_layer3_bench.rs  metal_vision_block_forward.rs
crates/spark-runtime/examples/metal_qwen35_inference/: dims.rs  full_attention.rs  linear_attention.rs  main.rs
crates/spark-runtime/src/: cuda_backend.rs  gpu.rs  kernel_args.rs  lib.rs  metal_backend.rs  prefix_cache.rs  radix_tree.rs  sampler.rs  weights.rs
crates/spark-runtime/src/buffers/: sizes.rs
crates/spark-runtime/src/cuda_backend/: gpu_impl.rs
crates/spark-runtime/src/fast_weights/: header.rs  mod.rs
crates/spark-runtime/src/metal_backend/: tests.rs
crates/spark-runtime/src/radix_tree/: snapshot.rs  snapshot_insert.rs  snapshot_stats.rs  snapshot_tier.rs
crates/spark-runtime/src/sampler/: sample_impl.rs  tests.rs
crates/spark-runtime/src/weights/: mlx_int8.rs
crates/spark-server/: Cargo.toml  tool_defaults.toml
crates/spark-server/src/: cli.rs  main.rs  tokenizer.rs  tool_parser.rs
crates/spark-server/src/api/: chat_blocking.rs  chat_phases.rs  completions.rs
crates/spark-server/src/cli/: serve_args.rs  validate.rs
crates/spark-server/src/grammar/: state.rs
crates/spark-server/src/main_modules/: serve.rs  serve_router.rs
crates/spark-server/src/openai/: annotations.rs  chat_response.rs  stream_chunk.rs  tests.rs
crates/spark-server/src/reasoning_parser/: mod.rs  parsers.rs  tests.rs
crates/spark-server/src/scheduler/: adaptive_spec.rs  confidence.rs  confidence_tests.rs  decode_logits_content.rs  decode_logits_seq.rs  decode_logits_step.rs  decode_step.rs  emit_step.rs  fast_greedy.rs  helpers.rs  helpers_tests.rs  lifecycle.rs  mod.rs  mod_helpers.rs  mtp_gate.rs  mtp_step.rs  mtp_timing.rs  phase_continue_prefills.rs  phase_promote_prefills.rs  prefill_a_step.rs  prefill_b_step.rs  repetition.rs  rollback.rs  rollback_tests.rs  sample_step.rs  ssm_decode_ring.rs  ssm_decode_ring_tests.rs  types.rs  verify_dflash_step.rs  verify_k2_step.rs  verify_k3_step.rs  verify_k4_step.rs  verify_pipeline_helper.rs
crates/spark-server/src/tokenizer/: chat_impl.rs  jinja_helpers.rs
crates/spark-server/src/tool_parser/: bare_json.rs  helpers_b.rs  hermes.rs  minimax_xml.rs  mistral.rs  qwen3_coder.rs  validation.rs
crates/spark-server/src/tscg/: mod.rs  render.rs  sdm.rs
crates/spark-storage/: Cargo.toml  build.rs
crates/spark-storage/src/: cuda_min.rs  high_speed_swap.rs  lib.rs  model_dims.rs  predictor.rs  stubs.rs
crates/spark-storage/src/kv_paging/: backend.rs
crates/xgrammar/: Cargo.toml  DESIGN.md  PORT_PLAN.md
crates/xgrammar/benches/: grammar_bench.rs
crates/xgrammar/src/: lib.rs
crates/xgrammar/src/api/: bitmask.rs  compiler.rs  dlpack.rs  grammar.rs  matcher.rs  mod.rs  tokenizer.rs
crates/xgrammar/src/compiler/: coalesce.rs  compile.rs  compiled_grammar.rs  compiler.rs  decompose.rs  decompose_unit_tests.rs  mask.rs  mod.rs  rule_cache.rs  rule_cache_tests.rs
crates/xgrammar/src/earley/: accept.rs  complete.rs  fsm_view.rs  mod.rs  parser.rs  parser_api.rs  predict.rs  predict_fsm.rs  prune.rs  prune_tests.rs  queue.rs  scan.rs  scan_charclass.rs  state.rs  tests.rs
crates/xgrammar/src/fsm/: algorithms.rs  algorithms_tests.rs  compact.rs  compact_array.rs  compact_tests.rs  compact_with_start_end.rs  dfa_ops.rs  edge.rs  fsm.rs  fsm_ops.rs  fsm_tests.rs  fsm_traversal.rs  mod.rs  simplify.rs  simplify_tests.rs  traversal.rs  union_find.rs  with_start_end.rs  with_start_end_tests.rs
crates/xgrammar/src/grammar/: builder.rs  builder_rules.rs  builder_tests.rs  data.rs  expr.rs  lexer.rs  lexer_scan.rs  lexer_tests.rs  lexer_token.rs  mod.rs  parser.rs  parser_element.rs  parser_error_tests.rs  parser_grammar_tests.rs  parser_macro.rs  parser_quant.rs  parser_repeat.rs  parser_tagdispatch.rs  parser_tests.rs  printer.rs
crates/xgrammar/src/matcher/: batch.rs  bitmask.rs  coalesce.rs  fill.rs  matcher.rs  mod.rs  tests.rs
crates/xgrammar/src/regex/: converter.rs  cursor.rs  escape_handlers.rs  mod.rs  sub_handlers.rs  tests.rs  tests_patterns.rs
crates/xgrammar/src/schema/: api.rs  cache_key.rs  converter.rs  error.rs  float_regex.rs  formats.rs  gen_array.rs  gen_composite.rs  gen_object.rs  gen_object_props.rs  gen_object_props_constrained.rs  gen_scalar.rs  indent.rs  json_value.rs  mod.rs  options.rs  parser.rs  parser_collections.rs  parser_composite.rs  range_regex.rs  script.rs  spec.rs  tests.rs  tests_objects.rs  tests_pattern_props.rs
crates/xgrammar/src/structural_tag/: analyzer.rs  converter.rs  converter_sep.rs  converter_tags.rs  error.rs  format.rs  json_serialize.rs  mod.rs  parser.rs  (+2 more)
(+318 files in other folders)
