[package]
name = "spark-model"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "Atlas Spark model — Qwen3 forward pass orchestration"

[features]
default = ["cuda"]
# spark-model has no Metal port yet (Phases 4–7 add it). The cuda feature
# forwards atlas-core/cuda + spark-runtime/cuda so the default Linux build
# remains unchanged after the workspace-level default-features = false on
# atlas-core.
cuda = [
    "atlas-core/cuda",
    "spark-runtime/cuda",
    "spark-storage/cuda",
    "spark-comm/cuda",
]
metal = [
    "atlas-core/metal",
    "spark-runtime/metal",
    "spark-storage/metal",
    "spark-comm/metal",
]

[dependencies]
atlas-core = { workspace = true }
atlas-kernels = { workspace = true }
# `default-features = false` so the metal feature can opt out of
# spark-runtime's `cuda` default — otherwise the dep line silently
# re-enables cudarc on every build.
spark-runtime = { path = "../spark-runtime", default-features = false }
spark-comm = { path = "../spark-comm", default-features = false }
# Same opt-out pattern as spark-runtime above — keeps metal builds
# from silently re-enabling spark-storage's cuda default.
spark-storage = { path = "../spark-storage", default-features = false }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
half = "2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
parking_lot = { workspace = true }

[dev-dependencies]
# `default-features = false` so a metal-feature build of spark-model doesn't
# inadvertently pull cudarc back in via the dev-dep chain.
spark-runtime = { path = "../spark-runtime", default-features = false, features = ["test-utils"] }

[lints]
workspace = true
