[package]
name = "spark-server"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "Atlas Spark — pure Rust LLM inference server"

[features]
default = ["cuda"]
# Forwards through to atlas-core/spark-runtime/spark-model so the default
# Linux build still activates the cuda backend after atlas-core became
# default-features = false at the workspace level.
cuda = [
    "atlas-core/cuda",
    "spark-runtime/cuda",
    "spark-model/cuda",
    "spark-storage/cuda",
    "spark-comm/cuda",
]
metal = [
    "atlas-core/metal",
    "spark-runtime/metal",
    "spark-model/metal",
    "spark-storage/metal",
    "spark-comm/metal",
]

[[bin]]
name = "spark"
path = "src/main.rs"

[dependencies]
atlas-core = { workspace = true }
atlas-kernels = { workspace = true }
# `default-features = false` on path-deps so the metal feature actually
# disables the cuda default that each downstream crate inherits.
spark-runtime = { path = "../spark-runtime", default-features = false }
spark-model = { path = "../spark-model", default-features = false }
spark-comm = { path = "../spark-comm", default-features = false }
spark-storage = { path = "../spark-storage", default-features = false }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full", "parking_lot"] }
tokio-stream = "0.1"
futures = "0.3"
rayon = "1.10"
parking_lot = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
toml = "0.8"
minijinja = { version = "2", features = ["builtins", "adjacent_loop_items", "json"] }
xgrammar-rs = "0.1"
prometheus = { version = "0.13", default-features = false }
lazy_static = "1"
tower-http = { version = "0.6", features = ["catch-panic", "cors"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
