[package]
name = "spark-server"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "Atlas Spark — pure Rust LLM inference server"

[features]
default = ["cuda", "nccl"]
# Forwards through to atlas-core/spark-runtime/spark-model so the default
# Linux build still activates the cuda backend after atlas-core became
# default-features = false at the workspace level.
cuda = [
    "atlas-core/cuda",
    "spark-runtime/cuda",
    "spark-model/cuda",
    "spark-storage/cuda",
    "spark-comm/cuda",
]
# `nccl` adds the NCCL multi-GPU collective backend (EP/TP) on top of
# `cuda`. NVIDIA builds get it via `default`; SCALE/AMD (gfx1151)
# single-GPU builds use `--no-default-features --features cuda` to skip
# linking libnccl.
nccl = ["cuda", "spark-comm/nccl"]
metal = [
    "atlas-core/metal",
    "spark-runtime/metal",
    "spark-model/metal",
    "spark-storage/metal",
    "spark-comm/metal",
]

[[bin]]
name = "spark"
path = "src/main.rs"

[dependencies]
atlas-core = { workspace = true }
atlas-kernels = { workspace = true }
# `default-features = false` on path-deps so the metal feature actually
# disables the cuda default that each downstream crate inherits.
spark-runtime = { path = "../spark-runtime", default-features = false }
spark-model = { path = "../spark-model", default-features = false }
spark-comm = { path = "../spark-comm", default-features = false }
spark-storage = { path = "../spark-storage", default-features = false }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["json"] }
# Direct hyper/hyper-util/tower access for the manual accept loop in
# `serve_router.rs` — `axum::serve` does not expose hyper's connection-layer
# `header_read_timeout`, which is what bounds a slowloris (slow-header) client.
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["full", "parking_lot"] }
tokio-stream = "0.1"
futures = "0.3"
rayon = "1.12"
parking_lot = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
toml = "0.8"
# `preserve_order`: minijinja stores `Value` maps as IndexMap (insertion
# order) instead of BTreeMap (sorted). Without this, `Value::from_serialize`
# re-sorts tool-schema keys before the custom `tojson` filter renders them,
# defeating the transformers key-order match in the `<tools>` block.
minijinja = { version = "2", features = ["builtins", "adjacent_loop_items", "json", "preserve_order"] }
# Pure-Rust grammar-constrained decoding (W7: was the C++-backed
# `xgrammar-rs = "0.1"` patched to `vendor/xgrammar-rs`; now the
# from-scratch Rust port at `crates/xgrammar`). The crate's lib is
# named `xgrammar`, so `use xgrammar::` resolves unchanged.
xgrammar = { path = "../xgrammar" }
prometheus = { version = "0.14", default-features = false }
lazy_static = "1"
tower-http = { version = "0.7", features = ["catch-panic", "cors"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
