# SPDX-License-Identifier: AGPL-3.0-only
#
# Pure-Rust XGrammar — structured-generation / grammar-constrained
# decoding engine. A from-scratch port of mlc-ai/xgrammar v0.1.32
# (originally C++), eliminating the cxx FFI bridge and the C++
# toolchain dependency. See PORT_PLAN.md for the port roadmap.
# W7: the standalone `[workspace]` table was removed so this crate
# joins the parent atlas workspace (registered in the root
# `Cargo.toml` `members` list); `spark-server` depends on it directly.

[package]
name = "xgrammar"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Pure-Rust grammar-constrained decoding (XGrammar port)"

[dependencies]
# Support layer — these crates replace cpp/support/* utilities:
#   dynamic_bitset.h -> bitvec ; thread_pool.h -> rayon ;
#   thread_safe_cache.h -> dashmap ; json_serializer.h/reflection.h -> serde
bitvec = "1"
rayon = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
thiserror = "2"

[dev-dependencies]
# Micro-benchmark harness for the Tier-1 perf work — measures
# `GrammarCompiler::compile_*` and `GrammarMatcher::fill_next_token_bitmask`.
criterion = "0.5"

[[bench]]
name = "grammar_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"
